# intent_ir

./: .dockerignore  .gitignore  LLM_USAGE.md  PROJECT_IMPLEMENTATION_DEEP_ANALYSIS_2025.md  README.md  llm_client.py  llm_intent.py  pytest.ini  test_api.py
archive/: README.md
archive/tests/: test_codegen_smoke.py  test_diff_runner.py  test_printer_mlir_like.py
backend_spmd_rvv/: README.md  __init__.py  codegen_c.py  codegen_rvv.py  lower_c.py
backend_spmd_rvv/analysis/: __init__.py  cost_model.py  tiling_search.py
backend_spmd_rvv/codegen/: __init__.py  cpp_driver.py  (+2 more)
backend_spmd_rvv/cpp_codegen/: CMakeLists.txt  README.md  intentir_codegen.cpp
backends/: README.md  __init__.py  capability.py
backends/cuda/cpp_codegen/: CMakeLists.txt  common_utils.h  dispatch_direct_kernels.inc  dispatch_lowering.inc  dispatch_pattern_kernels.inc  emit_attention_index_norm.inc  emit_conv_kernels.inc  emit_conv_pool_upsample.inc  emit_custom_correlation_resize.inc  emit_custom_kernels.inc  emit_custom_mv_warp.inc  emit_custom_rope_transpose.inc  emit_dropout.inc  emit_pool_sort_misc.inc  emit_reduction_index_misc.inc  emit_remaining_kernels_wave3.inc  emit_upsample_kernels.inc  emit_wave3_core.inc  emit_wave3_mid.inc  emit_wave3_tail.inc  entry_main.inc  entry_pybind.inc  intentir_cuda_codegen.cpp  ir_model.cpp  ir_model.h  shape_eval.cpp  shape_eval.h
compiler/intentir_mlir_plugin/: CMakeLists.txt  IntentIRPasses.cpp
data/: human_labels.json
doc/: E5_GPU_BACKEND_HANDOFF_2026-01-30.md
docker/: Dockerfile.cpu  README.md
docs/: ARCHITECTURE.md  ENVIRONMENT.md  FLAGGEMS_INTEGRATION.md  FORMAL_SEMANTICS.md  INTENT_MLIR_DIALECT.md  LLM_USAGE.md  SMT_O3_SOUNDNESS.md  TESTING.md
flag_gems/: __init__.py  runtime.py
frontends/: README.md  __init__.py
intent_ir/: README.md  __init__.py  diagnostics.py  ir_types.py  llm_client.py  llm_intent.py  llm_providers.example.json  macro_expand.py  macro_spec.py  parser_llm.py  printer_mlir_like.py
kernels/: README.md  __init__.py
pipeline/: README.md  __init__.py  interfaces.py  mlir_contract_artifacts.py  registry.py  run.py
requirements/: README.md  core.txt  dev.txt  gpu.txt
scripts/: CATALOG.json  README.md  analyze_perf.py  backend_codegen_smoke.py  benchmark_suite.py  cuda_backend_smoke.py  full_pipeline_verify.py  intentir.py  llm_api_smoke.py  pipeline_core.py  pipeline_report.py  pipeline_summary.py  rvv_cost_model_validate.py  rvv_probe.sh  rvv_remote_run.py  rvv_remote_suite.py  validate_catalog.py  verify_ops.py
tests/: CATALOG.json  README.md  conftest.py  test_backend_capability.py  test_backend_codegen_smoke_timings.py  test_codegen_smoke.py  test_compile_ttir_smoke.py  test_contract.py  test_diff_debugger.py  test_diff_runner.py  test_intent_canonicalize.py  test_interpreter_extended_ops.py  test_ir_formats.py  test_ir_types.py  test_mutation_breakdown.py  test_numerical_stability_suite.py  test_opset_matrix.py  test_parser_llm.py  test_pipeline_batch.py  test_printer_mlir_like.py  test_tolerances.py
triton_frontend/: affine_expr.py  certificate.py  contract.py  facts.py  static_validate.py
tritonops/: __init__.py  any.py  attention.py  groupnorm.py  layernorm.py  softmax.py  ttir_launch.py  ttir_smoke.py  upsample_bicubic2d_aa.py
utils/: __init__.py  libentry.py
verify/: README.md  diff_debugger.py  diff_runner.py  gen_cases.py  interpreter.py  ir_formats.py  metamorphic.py  mutation.py  numerical_stability.py  tolerances.py
(+697 files in other folders)
